traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:6: error: not found: value -
    case (1,getModeLargeur()-1) => setY(getY()+1) //ligne impaire, dernière case : on descends
                            ^TraversalZigZag:6: error: not found: value getModeLargeur
    case (1,getModeLargeur()-1) => setY(getY()+1) //ligne impaire, dernière case : on descends
            ^